# cubby

./: .dockerignore  .gitignore  CONCEPT.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  build.rs  seed.yaml  zero.toml
.claude/skills/implement/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/refine/: SKILL.md
.github/workflows/: conformance.yml  release.yml
docs/: release-workflow.md
docs/features/: 01-core-object-io-plan.md  01-core-object-io-spec.md  02-listing-delimiters-plan.md  02-listing-delimiters-spec.md  03-multipart-etags-plan.md  03-multipart-etags-spec.md  04-presigned-copy-batch-plan.md  04-presigned-copy-batch-spec.md  05-web-ui-plan.md  05-web-ui-spec.md  06-seed-conformance-matrix-plan.md  06-seed-conformance-matrix-spec.md  cors-plan.md  cors-spec.md  distribution-plan.md  distribution-spec.md  event-notifications-plan.md  event-notifications-spec.md  reindex-plan.md  reindex-spec.md  web-ui-defects-plan.md  web-ui-defects-spec.md
examples/: webhook_sink.rs
src/: access_log.rs  banner.rs  cli.rs  cors.rs  datadir.rs  db.rs  embed.rs  events.rs  http.rs  keypath.rs  lib.rs  listing.rs  main.rs  multipart.rs  notify.rs  presign.rs  reindex.rs  seed.rs  store.rs
src/api/: buckets.rs  cors.rs  events.rs  health.rs  mod.rs  notifications.rs  objects.rs  presign.rs  search.rs
tests/: cors.rs  live_log.rs  notifications.rs  reindex.rs  routing.rs  s3_api.rs  web_api.rs  web_ui.rs
tests/acceptance/: listing.sh  multipart.sh  presigned_copy_batch.sh  reindex.sh  seed.sh
tests/common/: mod.rs
tests/conformance/: .gitignore  run.sh
tests/conformance/awscli/: check.sh
tests/conformance/boto3/: check.py  check.sh
tests/conformance/go/: check.sh  go.mod  go.sum  main.go
tests/conformance/js/: check.mjs  check.sh  package.json
tests/conformance/rclone/: check.sh
web/: .gitignore  index.html
web/src/: app.ts
web/src/components/: chrome.ts  cors-panel.test.ts  cors-panel.ts  icons.ts  notifications-panel.test.ts  notifications-panel.ts  object-detail.ts
web/src/lib/: api.ts  browse.test.ts  browse.ts  format.test.ts  format.ts  log.test.ts  log.ts  preview.test.ts  preview.ts
web/src/routes/: browser.test.ts  browser.ts  live-log.test.ts  live-log.ts
web/src/stores/: browse.test.ts  browse.ts  chrome.test.ts  chrome.ts  cors.test.ts  cors.ts  notifications.test.ts  notifications.ts
web/styles/: app.scss
