[package]
name = "cubby"
version = "0.2.0"
edition = "2021"
description = "The SQLite of S3 — a single-binary, S3-compatible object store for local development"
license = "MIT"
repository = "https://github.com/robap/cubby"
homepage = "https://github.com/robap/cubby"
readme = "README.md"
keywords = ["s3", "object-storage", "sqlite", "minio", "storage"]
categories = ["development-tools", "web-programming::http-server", "command-line-utilities"]
# Explicit allow-list: ship the source and the committed UI artifact, nothing
# else. `web/dist/**` is the embedded web UI (see src/embed.rs). Deliberately
# excludes web/src, web/.zero, tests/, s3data/, docs/ so the crate stays small
# and builds with a Rust toolchain alone (no `zero`).
# Leading `/` anchors each pattern to the package root: unanchored `LICENSE`
# / `README.md` are gitignore-style and would also match the many nested
# node_modules LICENSE/README files under tests/.
include = ["/src/**", "/web/dist/**", "/README.md", "/LICENSE"]

[[bin]]
name = "cubby"
path = "src/main.rs"

[dependencies]
s3s = "0.14.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
md-5 = "0.10"
sha2 = "0.10"
hmac = "0.12"
getrandom = "0.2"
clap = { version = "4", features = ["derive", "env"] }
percent-encoding = "2"
base64 = "0.22"
time = { version = "0.3", features = ["formatting", "parsing"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bytes = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
rust-embed = "8"
pin-project-lite = "0.2"
http-body-util = "0.1"
async-stream = "0.3"

[dev-dependencies]
aws-sdk-s3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
aws-config = "1"
aws-credential-types = "1"
aws-smithy-types = "1"
tempfile = "3"
